# functional

./: .clang-tidy  CMakeLists.txt
.github/workflows/: build.yml
CMake/: Catch2.cmake  add_custom_test.cmake  clang-tidy.cmake  compiler_options.cmake  dze_type_traits.cmake
benchmark/: CMakeLists.txt  bench.cpp  bench_google_bench.cpp  bench_nanobench.cpp  get_objects.cpp  objects.hpp
include/dze/: aligned_allocator.hpp  function.hpp  functional.hpp  optional.hpp  optional_reference.hpp  small_buffer.hpp  type_traits.hpp
include/dze/details/: enable_special_members.hpp  function_delegate.hpp  function_storage.hpp
include/dze/details/function/: delegate.hpp  storage.hpp
test/: CMakeLists.txt  assignment.cpp  constructors.cpp  emplace.cpp  function.cpp  in_place.cpp  make_optional.cpp  noexcept.cpp  observers.cpp  optional.hpp  optional_reference.cpp  relops.cpp  type_traits.cpp
